--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
-a.txt
+# 운영 체제 관련 파일
+.DS_Store
+Thumbs.db
+
+# IDE 및 편집기 관련 파일
+.vscode/
+.idea/
+*.iml
+*.sublime-project
+*.sublime-workspace
+
+# 빌드 및 배포 파일
+__pycache__/
+*.py[cod]
+*.egg
+*.egg-info/
+dist/
+build/
+
+# 환경 설정 파일
+.env
+
+# 로그 파일
+*.log
+
+# 기타
+node_modules/
